...
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_5"
        android:layout_marginEnd="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_4"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toTopOf="@id/feedback_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/feedback_default_score" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/feedback_next_button"
...
